--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -13,7 +13,9 @@ python-dateutil>=1.4,<2
 protobuf>=2.5.0
 python-gflags>=2.0
 pyyaml>=3.10
+opencv-python
 Pillow>=2.3.0
 six>=1.1.0
 tensorflow-gpu==1.10.0
 keras==2.2.4
+
